--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"framer-motion": "^4.1.17",
 		"next": "latest",
 		"nprogress": "^0.2.0",
+		"prop-types": "^15.7.2",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2"
 	},
