:fire: Update profile
Rearranged the title component and also improved the profile styles and started the default integration of the profile

--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
 	"dependencies": {
 		"@headlessui/react": "^1.4.0",
 		"@heroicons/react": "^1.0.3",
+		"@reduxjs/toolkit": "^1.6.1",
 		"formik": "^2.2.9",
 		"framer-motion": "^4.1.17",
 		"next": "latest",
 		"nprogress": "^0.2.0",
 		"prop-types": "^15.7.2",
 		"react": "^17.0.2",
-		"react-dom": "^17.0.2"
+		"react-dom": "^17.0.2",
+		"react-redux": "^7.2.4"
 	},
 	"devDependencies": {
 		"@tailwindcss/forms": "^0.3.3",
