--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"@headlessui/react": "^1.4.0",
 		"@heroicons/react": "^1.0.3",
 		"@reduxjs/toolkit": "^1.6.1",
+		"@tippyjs/react": "^4.2.5",
 		"formik": "^2.2.9",
 		"framer-motion": "^4.1.17",
 		"next": "latest",
@@ -16,7 +17,8 @@
 		"prop-types": "^15.7.2",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
-		"react-redux": "^7.2.4"
+		"react-redux": "^7.2.4",
+		"tippy.js": "^6.3.1"
 	},
 	"devDependencies": {
 		"@tailwindcss/forms": "^0.3.3",
