--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
 	"dependencies": {
 		"@headlessui/react": "^1.4.0",
 		"@heroicons/react": "^1.0.3",
+		"@nivo/bar": "^0.73.1",
+		"@nivo/core": "^0.73.0",
+		"@nivo/line": "^0.73.0",
 		"@reduxjs/toolkit": "^1.6.1",
 		"@tippyjs/react": "^4.2.5",
 		"formik": "^2.2.9",
@@ -18,6 +21,9 @@
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-redux": "^7.2.4",
+		"react-simple-maps": "^2.3.0",
+		"react-tooltip": "^4.2.21",
+		"tinycolor2": "^1.4.2",
 		"tippy.js": "^6.3.1"
 	},
 	"devDependencies": {
