--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"formik": "^2.2.9",
 		"framer-motion": "^4.1.17",
 		"next": "latest",
+		"nookies": "^2.5.2",
 		"nprogress": "^0.2.0",
 		"prop-types": "^15.7.2",
 		"react": "^17.0.2",
