--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
 		"react-simple-maps": "^2.3.0",
 		"react-tooltip": "^4.2.21",
 		"tinycolor2": "^1.4.2",
-		"tippy.js": "^6.3.1"
+		"tippy.js": "^6.3.1",
+		"uuid": "^8.3.2"
 	},
 	"devDependencies": {
 		"@tailwindcss/forms": "^0.3.3",
